# open-claude-for-excel

./: README.md  main.py  pyproject.toml
src/open_claude_for_excel/: __init__.py  __main__.py  agent.py
src/open_claude_for_excel/tools/: __init__.py  calculations.py  cell_utils.py  cell_validation.py  chart.py  data.py  exceptions.py  formatting.py  pivot.py  sheet.py  tools.py  validation.py  workbook.py
