[project]
name = "open-claude-for-excel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "QiyuanChen", email = "chenqiyuan1012@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.2",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "openpyxl>=3.1.5",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
